[project]
name = "query-farm-airport-hello-world-server"
version = "0.1.0"
description = "A Hello World server for the Airport Exception"
authors = [
    { name = "Rusty Conover", email = "rusty@query.farm" }
]
dependencies = [
    "query-farm-flight-server>=0.1.5",
    "petname>=2.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-mypy>=0.10.3",
    "pytest-env>=1.1.3",
    "pytest-cov>=5.0.0",
    "pytest-parallel>=0.1.1",
    "pytest-xdist>=3.6.1",
    "ruff==0.11.2",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/query_farm_airport_hello_world_server"]

[project.scripts]
airport_hello_world_server = 'query_farm_airport_hello_world_server:do_server'

[tool.rye.scripts]
dev = { cmd = "airport_hello_world_server --location grpc://0.0.0.0:53333", description = "Run the server" }

[tool.pytest]


[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true


[tool.pydantic.mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ['E501']
